--- a/apps/dashboard/src/index.html
+++ b/apps/dashboard/src/index.html
@@ -5,7 +5,9 @@
     <title>TurboVets Dashboard</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/jpeg" href="assets/TV_logo.jpeg" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" href="assets/TV_logo.jpeg" />
   </head>
   <body class="min-h-screen bg-gray-50 dark:bg-gray-900">
     <app-root></app-root>
