--- a/apps/dashboard/src/index.html
+++ b/apps/dashboard/src/index.html
@@ -2,12 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>TurboVets Dashboard</title>
+    <title>TurboTask Dashboard</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/jpeg" href="assets/TV_logo.jpeg" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link rel="apple-touch-icon" href="assets/TV_logo.jpeg" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon_io/favicon.ico" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/favicon_io/favicon-16x16.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/favicon_io/apple-touch-icon.png"
+    />
+    <link rel="manifest" href="assets/favicon_io/site.webmanifest" />
   </head>
   <body class="min-h-screen bg-gray-50 dark:bg-gray-900">
     <app-root></app-root>
